Fixes responsive issues on mobile with projects scroll

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -52,7 +52,7 @@ body {
 .section .showcase {
   overflow: auto;
   white-space: nowrap;
-  width: 100vw;
+  max-width: 100vw;
   position: relative;
   margin-left: -50vw;
   padding: 40px 0;
@@ -96,7 +96,7 @@ body {
 
 @media only screen and (max-width: 768px) {
   .section .content {
-    width: 100%;
+    width: calc(100% - 40px);
     display: block;
     padding: 20px;
   }
@@ -106,7 +106,8 @@ body {
   }
 
   .section .content .showcase {
-    margin: 0;
+    left: 0;
+    margin: 0 -20px;
   }
 }
 
@@ -185,7 +186,12 @@ small {
 }
 
 @media only screen and (max-width: 768px) {
+  body {
+    font-size: 1em;
+  }
+
   .big {
+    font-size: 3em;
     margin-top: 0;
   }
 }
