--- a/resources/sass/components/section.scss
+++ b/resources/sass/components/section.scss
@@ -30,7 +30,7 @@
     .showcase {
         overflow: auto;
         white-space: nowrap;
-        width: 100vw;
+        max-width: 100vw;
         position: relative;
         margin-left: -50vw;
         padding: 40px 0;
@@ -77,7 +77,7 @@
 @media only screen and (max-width: 768px) {
     .section {
         .content {
-            width: 100%;
+            width: calc(100% - 40px);
             display: block;
             padding: 20px;
 
@@ -86,7 +86,8 @@
             }
 
             .showcase {
-                margin: 0;
+                left: 0;
+                margin: 0 -20px;
             }
         }
     }
